<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.szlib.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:src="@drawable/szlib"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/description_padding"
        android:text="@string/description"
        android:textAlignment="textStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/LinearLayout_padding_LeftRight"
        android:paddingRight="@dimen/LinearLayout_padding_LeftRight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableStart="@drawable/phone"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColorLink="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableStart="@drawable/email"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/email"
            android:textColorLink="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableStart="@drawable/web"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/website"
            android:textColorLink="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableStart="@drawable/location"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>
